2nd training/Community/Community/Community1/force-app/main/default/objects/Temporary_Crate__c/Temporary_Crate__c.object-meta.xml
<CustomObject>
    <label>Temporary Crate</label>
    <nameField>
        <label>Crate</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Temporary Crates</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>