2nd training/Community/Community/Community1/force-app/main/default/objects/Temporary_Crate__c/fields/Artwork_Details__c.field-meta.xml
<CustomField>
    <fullName>Artwork_Details__c</fullName>
    <label>Remarks</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>