2nd training/Community/Community/Community1/force-app/main/default/objects/Temporary_Crate__c/fields/Collection_No__c.field-meta.xml
<CustomField>
    <fullName>Collection_No__c</fullName>
    <label>Collection No</label>
    <length>45</length>
    <type>Text</type>
</CustomField>