2nd training/Community/Community/Community1/force-app/main/default/objects/Temporary_Crate__c/fields/Freight_No__c.field-meta.xml
<CustomField>
    <fullName>Freight_No__c</fullName>
    <label>Freight No</label>
    <referenceTo>Freight_Calculator__c</referenceTo>
    <relationshipLabel>Temporary Crates</relationshipLabel>
    <relationshipName>Temporary_Crates</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>