2nd training/Community/Community/Community1/force-app/main/default/objects/Temporary_Crate__c/fields/FreightProduct_Added__c.field-meta.xml
<CustomField>
    <fullName>FreightProduct_Added__c</fullName>
    <defaultValue>false</defaultValue>
    <label>FreightProduct Added</label>
    <type>Checkbox</type>
</CustomField>