2nd training/Community/Community/Community1/force-app/main/default/objects/Temporary_Crate__c/fields/FreightProductLineItem__c.field-meta.xml
<CustomField>
    <fullName>FreightProductLineItem__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>FreightProductLineItem</label>
    <referenceTo>FreightProductLineItem__c</referenceTo>
    <relationshipLabel>Temporary Crates</relationshipLabel>
    <relationshipName>Temporary_Crates</relationshipName>
    <type>Lookup</type>
</CustomField>