2nd training/Community/Community/Community1/force-app/main/default/objects/Temporary_Crate__c/fields/Location__c.field-meta.xml
<CustomField>
    <fullName>Location__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Crate Location</label>
    <referenceTo>Location__c</referenceTo>
    <relationshipLabel>Temporary Crates</relationshipLabel>
    <relationshipName>Temporary_Crates</relationshipName>
    <type>Lookup</type>
</CustomField>