2nd training/Community/Community/Community1/force-app/main/default/objects/Temporary_Crate__c/fields/myCollector__c.field-meta.xml
<CustomField>
    <fullName>myCollector__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Collector</label>
    <referenceTo>artApp__Collector__c</referenceTo>
    <relationshipLabel>Temporary Crates</relationshipLabel>
    <relationshipName>Temporary_Crates</relationshipName>
    <type>Lookup</type>
</CustomField>