2nd training/Community/Community/Community1/force-app/main/default/objects/Temporary_Crate__c/fields/Piece_Count__c.field-meta.xml
<CustomField>
    <fullName>Piece_Count__c</fullName>
    <label>Piece Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>