2nd training/Community/Community/Community1/force-app/main/default/objects/Temporary_Crate__c/fields/Shipper_s_Mark__c.field-meta.xml
<CustomField>
    <fullName>Shipper_s_Mark__c</fullName>
    <label>Shipper&apos;s Mark</label>
    <length>20</length>
    <type>Text</type>
</CustomField>