2nd training/Community/Community/Community1/force-app/main/default/objects/Temporary_Crate__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Empty or Loaded?</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Empty</fullName>
            </value>
            <value>
                <fullName>Loaded</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>