2nd training/Community/Community/Community1/force-app/main/default/objects/Temporary_Crate__c/fields/Transaction__c.field-meta.xml
<CustomField>
    <fullName>Transaction__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Transaction</label>
    <referenceTo>artApp__Transaction__c</referenceTo>
    <relationshipLabel>Temporary Crates</relationshipLabel>
    <relationshipName>Temporary_Crates</relationshipName>
    <type>Lookup</type>
</CustomField>