2nd training/Community/Community/Community1/force-app/main/default/objects/Temporary_Crate__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Box</fullName>
            </value>
            <value>
                <fullName>Crate</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>