2nd training/Community/Community/Community1/force-app/main/default/objects/Temporary_Crate__c/fields/Volumetric_Weight__c.field-meta.xml
<CustomField>
    <fullName>Volumetric_Weight__c</fullName>
    <formula>( Length__c  *  Width__c  *  Height__c )/6000</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Volumetric Weight</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>