2nd training/Community/Community/Community1/force-app/main/default/objects/Temporary_Crate__c/fields/Volumetric_Weight_cbm__c.field-meta.xml
<CustomField>
    <fullName>Volumetric_Weight_cbm__c</fullName>
    <formula>(Height__c * Length__c * Width__c)/1000000</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Volume cbm</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>