2nd training/Community/Community/Community1/force-app/main/default/objects/Temporary_Crate__c/fields/Volumetric_Weight_Kgs__c.field-meta.xml
<CustomField>
    <fullName>Volumetric_Weight_Kgs__c</fullName>
    <formula>Volumetric_Weight_cbm__c * 167</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Volumetric Weight Kgs</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>